# std-expected

./: .clang-format  CMakeLists.txt  README.md  expected.hpp
include/expected/: expected.hpp
tests/: CMakeLists.txt  test1.cpp
tests/src/: tests.cpp
